--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "cosenary/instagram": "*"
+        "cosenary/instagram": "dev-master"
     },
     "autoload": {
         "psr-4": {
